Bug 1332952 - Implement GetAsSourceSurface() for SharedRGBImage. r=mattwoodrow a=lizzard

MozReview-Commit-ID: E9zl5FchvZG

--HG--
extra : source : 7927148d6726a6cb3751a5b3f8664fa9c6f5496d